Fixed mozaic layout issue when 4 tall images appear on the same row

--- a/css/website.css
+++ b/css/website.css
@@ -197,6 +197,7 @@ a.active {
   margin-bottom: 10px;
   margin-right: -5px;
   margin-left: -5px;
+  height: 190px;
 }
 
 #projects .pic {
